cmake_minimum_required(VERSION 3.6)
project(caesarlinsa)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
include_directories(/home/caesar/ClionProjects/caesarlinsa/include)
set(SOURCE_FILES main.c ArrayList.c util.c)
add_executable(caesarlinsa ${SOURCE_FILES})
target_link_libraries(caesarlinsa gumbo)